--- a/StudentApiService/pom.xml
+++ b/StudentApiService/pom.xml
@@ -37,17 +37,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>kafkadtos</groupId>
-			<artifactId>StudentEntityService</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<systemPath>${project.basedir}/libs/StudentEntityService.jar
-			</systemPath>
-			<scope>system</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>ru.shtyrev</groupId>
+			<artifactId>StudentEntityService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
@@ -64,6 +62,10 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
